--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=wikigroup
+server.port=8080
+spring.main.banner-mode=off
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/wikigroup_wiki_db
+spring.datasource.username=root
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Thymeleaf Configuration
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.com.example.wikigroup=DEBUG
