--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,29 @@ spring.application.name=wikigroup
 server.port=8080
 spring.main.banner-mode=off
 
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/wikigroup_wiki_db
-spring.datasource.username=root
-spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
+# H2 Database Configuration (In-Memory)
+spring.datasource.url=jdbc:h2:mem:wikigroup_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # Thymeleaf Configuration
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
 
 # Logging Configuration
 logging.level.org.springframework=INFO
 logging.level.com.example.wikigroup=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
